Run script updated